--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
         <!-- Terminal Header with H1 -->
         <section class="terminal-header" role="banner">
             <div class="code-font text-sm text-gray-400 mb-2 mt-4">$ ./usr/bin/whoami</div>
-            <h1 id="typewriter" class="code-font typewriter inline-block glitch" data-text="vr0px">vr0px</h1>
+            <h1 id="typewriter" class="code-font typewriter inline-block glitch" data-text="vr0px"></h1>
         </section>
         
         <!-- Professional Description -->
@@ -803,3 +803,4 @@
 
 </body>
 </html>
+
