--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     <main class="main-container text-center z-10" role="main">
         <!-- Profile Section -->
         <header class="mb-6 flex justify-center">
-            <img src="https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUyYTFkN3l4Y3Z6dDJnOHQwOG55Y3B3MXdvMGk2eDRpaG1jbjE4OTBlZSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/b018SvPzAauSrfr2X8/giphy-downsized-medium.gif" 
+            <img src="images/profile-pic.webp" 
                  alt="vr0px - Pentester profesional y especialista en ciberseguridad de Bolivia" 
                  class="profile-img rounded-full object-cover"
                  loading="eager"
@@ -803,4 +803,5 @@
 
 </body>
 </html>
+
 
