--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <!-- Open Graph Tags for Social Media -->
     <meta property="og:title" content="vr0px | Pentester Experto & Especialista en Ciberseguridad">
     <meta property="og:description" content="Pentester profesional de Bolivia especializado en Red Team, Bug Bounty y auditorías de seguridad. Explora mi blog de ciberseguridad y certificaciones.">
-    <meta property="og:image" content="https://vr0px.xyz/images/vr0px-profile.jpg">
+    <meta property="og:image" content="https://vr0px.xyz/images/vr0px-pp.png">
     <meta property="og:image:alt" content="vr0px - Pentester y especialista en ciberseguridad">
-    <meta property="og:image:width" content="400">
-    <meta property="og:image:height" content="400">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://vr0px.xyz">
     <meta property="og:type" content="profile">
     <meta property="og:site_name" content="vr0px Cybersecurity">
@@ -35,7 +35,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="vr0px | Pentester Experto & Especialista en Ciberseguridad">
     <meta name="twitter:description" content="Pentester profesional especializado en Red Team, Bug Bounty y auditorías de seguridad. Consultor en ciberseguridad con amplia experiencia.">
-    <meta name="twitter:image" content="https://vr0px.xyz/images/vr0px-profile.jpg">
+    <meta name="twitter:image" content="https://vr0px.xyz/images/vr0px-pp.png">
     <meta name="twitter:image:alt" content="vr0px - Pentester y especialista en ciberseguridad">
     <meta name="twitter:creator" content="@vr0px">
     <meta name="twitter:site" content="@vr0px">
@@ -803,6 +803,7 @@
 
 </body>
 </html>
+
 
 
 
