--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         "jobTitle": "Penetration Testing Specialist & Cybersecurity Expert",
         "description": "Pentester profesional especializado en Red Team, Bug Bounty hunting y auditorías de seguridad informática. Experto en ethical hacking con certificaciones reconocidas internacionalmente.",
         "url": "https://vr0px.xyz/",
-        "image": "https://vr0px.xyz/images/vr0px-profile.jpg",
+        "image": "https://vr0px.xyz/images/vr0px-pp.png",
         "address": {
             "@type": "PostalAddress",
             "addressLocality": "Cochabamba",
@@ -803,6 +803,7 @@
 
 </body>
 </html>
+
 
 
 
