--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Open Graph Tags for Social Media -->
     <meta property="og:title" content="vr0px | Pentester Experto & Especialista en Ciberseguridad">
     <meta property="og:description" content="Pentester profesional de Bolivia especializado en Red Team, Bug Bounty y auditorías de seguridad. Explora mi blog de ciberseguridad y certificaciones.">
-    <meta property="og:image" content="https://vr0px.xyz/images/vr0px-pp.png">
+    <meta property="og:image" content="https://vr0px.xyz/images/vr0prwwrrw.png">
     <meta property="og:image:alt" content="vr0px - Pentester y especialista en ciberseguridad">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -803,6 +803,7 @@
 
 </body>
 </html>
+
 
 
 
