--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <!-- SEO Meta Tags -->
     <title>vr0px | Pentester Experto & Especialista en Ciberseguridad | Ethical Hacking</title>
     <meta name="description" content="vr0px - Pentester profesional especializado en Red Team, Bug Bounty y auditorías de seguridad. Descubre mi blog de ciberseguridad, certificaciones y notas de pentesting. Consultor en seguridad informática con experiencia en ethical hacking.">
-    <meta name="keywords" content="pentester bolivia, penetration testing, cybersecurity expert, red team, bug bounty hunter, ethical hacking, vr0px, security consultant, auditoría seguridad, hacking ético, ciberseguridad">
+    <meta name="keywords" content="pentester , penetration testing, cybersecurity expert, red team, bug bounty hunter, ethical hacking, vr0px, security consultant, auditoría seguridad, hacking ético, ciberseguridad">
     <meta name="author" content="vr0px - César Arias">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     
     <!-- Geographic and Language SEO -->
-    <meta name="geo.region" content="BO-C">
-    <meta name="geo.placename" content="Cochabamba, Bolivia">
+    <meta name="geo.region" content="ES-C">
+    <meta name="geo.placename" content="Madrid, España">
     <meta name="geo.position" content="-17.3895;-66.1568">
     <meta name="ICBM" content="-17.3895, -66.1568">
     <meta name="language" content="Spanish">
@@ -21,7 +21,7 @@
     
     <!-- Open Graph Tags for Social Media -->
     <meta property="og:title" content="vr0px | Pentester Experto & Especialista en Ciberseguridad">
-    <meta property="og:description" content="Pentester profesional de Bolivia especializado en Red Team, Bug Bounty y auditorías de seguridad. Explora mi blog de ciberseguridad y certificaciones.">
+    <meta property="og:description" content="Pentester profesional especializado en Red Team, Bug Bounty y auditorías de seguridad. Explora mi blog de ciberseguridad y certificaciones.">
     <meta property="og:image" content="https://vr0px.xyz/images/vr0px-pp.png">
     <meta property="og:image:alt" content="vr0px - Pentester y especialista en ciberseguridad">
     <meta property="og:image:width" content="1200">
@@ -93,11 +93,11 @@
         "image": "https://vr0px.xyz/images/vr0px-pp.png",
         "address": {
             "@type": "PostalAddress",
-            "addressLocality": "Cochabamba",
-            "addressRegion": "Cochabamba",
-            "addressCountry": "BO"
+            "addressLocality": "Madrid",
+            "addressRegion": "Madrid",
+            "addressCountry": "ES"
         },
-        "nationality": "Bolivian",
+        "nationality": "Spain",
         "knowsAbout": [
             "Penetration Testing",
             "Ethical Hacking",
@@ -161,7 +161,7 @@
             "@type": "Person",
             "name": "vr0px"
         },
-        "areaServed": "BO",
+        "areaServed": "ES",
         "serviceType": [
             "Penetration Testing",
             "Security Auditing",
@@ -550,7 +550,7 @@
         <!-- Profile Section -->
         <header class="mb-6 flex justify-center">
             <img src="images/profile-pic.webp" 
-                 alt="vr0px - Pentester profesional y especialista en ciberseguridad de Bolivia" 
+                 alt="vr0px - Pentester profesional y especialista en ciberseguridad de España" 
                  class="profile-img rounded-full object-cover"
                  loading="eager"
                  width="130"
@@ -803,6 +803,7 @@
 
 </body>
 </html>
+
 
 
 
