--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:url" content="https://vr0px.xyz">
     <meta property="og:type" content="profile">
     <meta property="og:site_name" content="vr0px Cybersecurity">
-    <meta property="og:locale" content="es_BO">
+    <meta property="og:locale" content="es_ES">
     
     <!-- Twitter Card Tags -->
     <meta name="twitter:card" content="summary_large_image">
@@ -803,6 +803,7 @@
 
 </body>
 </html>
+
 
 
 
